simple-HTML-form.html

--- a/simple-HTML-form.html
+++ b/simple-HTML-form.html
@@ -22,13 +22,13 @@
 
                 <!-- Gender(Radio Buttons) -->
                 <p> GENDER:- </p>
-                <input type="radio" id="female" name="gender">
+                <input type="radio" id="female" name="gender" value="female">
                 <label for="female"> Female </label> <br>
 
-                <input type="radio" id="male" name="gender">
+                <input type="radio" id="male" name="gender" value="male">
                 <label for="male"> Male </label> <br>
 
-                <input type="radio" id="other" name="gender">
+                <input type="radio" id="other" name="gender" value="other">
                 <label for="other"> Other </label> <br> <br>
 
                 <!-- Country(Dropdown) -->
@@ -42,13 +42,13 @@
 
                 <!-- Hobbies(Checkboxes) -->
                 <p> HOBBIES:-  </p>
-                <input type="checkbox" id="reading" name="hobby[]">
+                <input type="checkbox" id="reading" name="hobby[]" value="reading">
                 <label for="reading"> Reading </label>
                 <br>
-                <input type="checkbox" id="dancing" name="hobby[]">
+                <input type="checkbox" id="dancing" name="hobby[]" value="dancing">
                 <label for="dancing"> Dancing </label>
                 <br>
-                <input type="checkbox" id="gaming" name="hobby[]">
+                <input type="checkbox" id="gaming" name="hobby[]" value="gaming">
                 <label for="gaming"> Gaming </label>
                 <br>
 
